fixed side scroll width issue on safari

--- a/app/components/schedule-box/schedule-box.component.less
+++ b/app/components/schedule-box/schedule-box.component.less
@@ -5,6 +5,7 @@
   margin-right: 5px;
   border: 1px solid @highlightGrey;
   background-color: @white;
+  float:left;
   &-date{
     width:100%;
     height:30px;
